--- a/west.yml
+++ b/west.yml
@@ -18,6 +18,8 @@ manifest:
   remotes:
     # nRF Connect SDK GitHub organization.
     # NCS repositories are hosted here.
+    - name: zephyr
+      url-base: https://github.com/cladoc
     - name: ncs
       url-base: https://github.com/nrfconnect
     # Third-party repository sources:
@@ -61,7 +63,7 @@ manifest:
     # https://developer.nordicsemi.com/nRF_Connect_SDK/doc/latest/zephyr/guides/modules.html
     - name: zephyr
       repo-path: sdk-zephyr
-      revision: v3.4.99-ncs1
+      revision: c14ff95b07de84c5e6310230ae76024f951c6c86
       import:
         # In addition to the zephyr repository itself, NCS also
         # imports the contents of zephyr/west.yml at the above
